add VM args to GuiTestLauncher and runConfigs for jdk17
Intellij's ClipboardSynchronizer requires access to sun.awt.X11,
with the JDK migration it's explicitly required.

Additionally, embedded.jdk.path is needed for
EmbeddedDistributionPaths to select the intended JDK to run the GuiTests.

Fixes: 243594917
Change-Id: Ifc2defa9cc7773cef2cc03075495ebd60baf2918

GitOrigin-RevId: ce572bd43c9773b94c85eec2813639c024382e54